# xcrun

./: .gitignore  .pylintrc  LICENSE.txt  README.md  azure-pipelines.yml  main.py  pylintrc  pyproject.toml  requirements.txt  setup.py  simctl.py  simulator.py  stylecheck.sh  test.py  test.sh  tox.ini
isim/: __init__.py  base_types.py  device.py  device_pair.py  device_type.py  listall.py  runtime.py
lib/: main.py
lib/xcrun/: __init__.py
lib/xcrun/simctl/: __init__.py  device.py  device_pair.py  device_type.py  listall.py  runtime.py  simctl.py  simulator.py
src/: __init__.py  device.py  device_pair.py  device_type.py  runtime.py  simctl.py  utility.py
tests/: __init__.py  test_device_types.py  test_devices.py  test_runtimes.py
xcrun/: .pylintrc  __init__.py
xcrun/simctl/: __init__.py  device.py  device_pair.py  device_type.py  listall.py  runtime.py  simctl.py
