[tool.poetry]
name = "isim"
version = "13.0.0"
description = "Python wrapper around the simctl utility"

license = "MIT"

authors = [
    "Dale Myers <dale@myers.io>"
]

readme = 'README.md'

repository = "https://github.com/dalemyers/xcrun"
homepage = "https://github.com/dalemyers/xcrun"

keywords = ['xcode', 'xcrun', 'simctl', 'ios', 'simulator', 'isim']

classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: MacOS X',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: MacOS :: MacOS X',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Topic :: Software Development :: Build Tools',
        'Topic :: Software Development :: Testing',
        'Topic :: Utilities'
    ]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "=21.8b0"
mypy = "=0.910"
pylint = "=2.10.2"
pytest = "=6.2.5"
pytest-cov = "=2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
