[tool.poetry]
name = "isim"
version = "15.0.0"
description = "Python wrapper around the simctl utility"

license = "MIT"

authors = [
    "Dale Myers <dale@myers.io>"
]

readme = 'README.md'

repository = "https://github.com/dalemyers/xcrun"
homepage = "https://github.com/dalemyers/xcrun"

keywords = ['xcode', 'xcrun', 'simctl', 'ios', 'simulator', 'isim']

classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: MacOS X',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: MacOS :: MacOS X',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Software Development :: Build Tools',
        'Topic :: Software Development :: Testing',
        'Topic :: Utilities'
    ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "=23.7.0"
mypy = "=1.5.1"
pylint = "=2.17.5"
pytest = "=7.4.0"
pytest-cov = "=4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
